# fastSDRS

./: .gitignore  CMakeLists.txt  setup.py
Articulated/: ArticulatedLoader.cpp  ArticulatedLoader.h  ArticulatedUtils.cpp  RigidBodyMass.cpp  RigidBodyMass.h
ConvexHull/: CollisionGradInfo.h  ConvexHullDistanceConvexEnergy.cpp  ConvexHullDistanceConvexEnergy.h  ConvexHullDistanceEnergy.cpp  ConvexHullDistanceEnergy.h  ConvexHullDistanceFrictionEnergy.cpp  ConvexHullMeshDistanceEnergy.cpp  ConvexHullMeshDistanceEnergy.h  ConvexHullMeshDistanceFrictionEnergy.cpp  DistanceEnergy.h
Environment/: BVHNode.cpp  BVHNode.h  CompositeShapeExact.cpp  ContactGenerator.cpp  ContactGenerator.h  Environment.cpp  EnvironmentUtils.cpp  EnvironmentUtils.h  EnvironmentVisualizer.cpp  EnvironmentVisualizer.h  GJK.cpp  GJK.h  MeshExact.cpp  MeshExact.h  ShapeExact.cpp  ShapeExact.h
Main/DebugArticulated/: mainArticulatedLoadBasic.cpp  mainArticulatedLoadURDF.cpp  mainArticulatedUtils.cpp  mainContactManifold.cpp  mainConvex2D.cpp  mainEnvironment.cpp  mainFacetEdge.cpp  mainGJK.cpp  mainIO.cpp  mainPBCentroidDynamics.cpp  mainPolynomial.cpp  mainRotationUtils.cpp  mainSAT.cpp  mainSparseUtils.cpp  mainUtils.cpp
Main/DebugSimulator/: mainConvHullPBDChain.cpp  mainConvHullPBDTwoChain.cpp  mainConvexHullChainPD.cpp  mainConvexHullGrasper.cpp  mainConvexHullSpiderPD.cpp  mainDebugBaryDerivative.cpp  mainDebugCC.cpp  mainDebugConvHullPBD.cpp  mainDebugConvHullPBDDesign.cpp  mainDebugJacobianDeriv.cpp  mainDebugJointLimit.cpp  mainDebugPBDMatrixSolve.cpp  mainDebugSoftJoint.cpp  mainDebugXPBD.cpp  mainPBDBox.cpp  mainPBDBoxCrush.cpp  mainPBDBoxEdge.cpp  mainPBDBoxStack.cpp  mainPBDChainKinematic.cpp  mainPBDLimit.cpp  mainXPBDBoxStack.cpp  mainXPBDChain.cpp  mainXPBDChainPD.cpp  mainXPBDReadMJCF.cpp  mainXPBDTwoChain.cpp
Python/: RBRS.py  gstest.py  mainConvHullPBDTwoChain.py  pyPBAD.cpp  testPBAD.py  utils.py  visualizer.py
Python/log_spi/: events.out.tfevents.1735739183.yxh-System-Product-Name.920009.0  events.out.tfevents.1735739256.yxh-System-Product-Name.926040.0  events.out.tfevents.1735744475.yxh-System-Product-Name.978185.0  events.out.tfevents.1735744526.yxh-System-Product-Name.982509.0  events.out.tfevents.1735744606.yxh-System-Product-Name.989277.0
Simulator/: ConvHullPBDSimulator.cpp  ConvHullPBDSimulator.h  JointLimit.cpp  JointLimit.h  MeshBasedPBDSimulator.cpp  MeshBasedPBDSimulator.h  PBDMatrixSolver.cpp  PBDMatrixSolver.h  PBDSimulator.cpp  PBDSimulator.h  Simulator.cpp  Simulator.h  SimulatorVisualizer.cpp  SimulatorVisualizer.h  SoftJoint.cpp  SoftJoint.h  XPBDSimulator.cpp  XPBDSimulator.h
Utils/: CrossSpatialUtils.h  IO.cpp  Pragma.h  RotationUtils.h  SOSPolynomial.cpp  SparseUtils.h  SpatialRotationUtils.h  Timing.cpp  Timing.h  Utils.h  VTKWriter.h  Zero.h
cmake/: LoadLibs.cmake
log_spi/: events.out.tfevents.1735726456.yxh-System-Product-Name.686909.0  events.out.tfevents.1735726509.yxh-System-Product-Name.691253.0  events.out.tfevents.1735738404.yxh-System-Product-Name.856660.0  events.out.tfevents.1735738504.yxh-System-Product-Name.864885.0  events.out.tfevents.1735738630.yxh-System-Product-Name.875107.0  events.out.tfevents.1735738869.yxh-System-Product-Name.894514.0  events.out.tfevents.1735738927.yxh-System-Product-Name.899306.0  events.out.tfevents.1735738962.yxh-System-Product-Name.902193.0
pyPBAD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
